# leftwm-theme-dark-nord

./: .vimrc  Cargo.toml  Makefile  README.md  alacritty-nord.yaml  ascii_banner.txt  down  picom.conf  polybar.config  rustfmt.toml  template.liquid  theme.toml  up
.config/: starship.toml
.config/alacritty/: alacritty.yml
.config/baru/: baru.yaml
.config/eww/dark-nord/: eww.scss  eww_bar.yuck  eww_variables.yuck  eww_widgets.yuck  eww_windows.yuck  variables.scss
.config/i3status-rust/: config.toml
.config/leftwm/: config.toml
.config/lefty-status/: config.toml
.config/pb-status/: config.toml
rofi/: list_launcher.rasi  main_rofi.rasi  powermenu.rasi  powermenu.sh
src/: lefty_manager.rs  lefty_server.rs  lib.rs  main.rs  statusbar.rs  util.rs
src/util/: event.rs  ui.rs
test/: leftwm-state.json
