[package]
name = "leftwm-theme-dark-nord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lefty-status"
path = "src/statusbar.rs"

[[bin]]
name = "lefty-server"
path = "src/lefty_server.rs"

[[bin]]
name = "lefty-manager"
path = "src/lefty_manager.rs"
required-features = [ "manager" ]

[dependencies]
battery = "0.7"
# yansi = "0.5"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "3.0.0-rc.9", features = ["derive"]}
clap_generate = { version = "3.0.0-rc.9"}
shellexpand = "1.0"
systemstat = "0.1"
strfmt = "0.1"
tui = { version = "0.16", optional = true }
termion = { version = "1.5", optional = true }
rand = "0.8"
tokio = { version = "1.0", features = [ "full" ] }
dbus = "0.9"
dbus-tokio = { version = "0.7", features = ["dbus-crossroads"]}
# dbus-crossroads = "0.5"

[features]
default = []
manager = [
    "tui",
    "termion"
]

